# market-scanner

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-report.yml
opportunity_engine/: __init__.py  __main__.py  config.py  models.py  serverless.py
opportunity_engine/dash/: __init__.py  streamlit_app.py
opportunity_engine/data_ingest/: __init__.py  alpaca_provider.py  alpha_vantage_provider.py  analyst_targets.py  base.py  earnings.py  finnhub_provider.py  fundamentals.py  ipo_calendar.py  market_data.py  mock_provider.py  news.py  yahoo_provider.py
opportunity_engine/engine/: __init__.py  entry_exit_engine.py  opportunity_report.py  pipeline.py  ranker.py  scorer.py  thesis_generator.py  universe.py  validate.py
opportunity_engine/features/: __init__.py  _util.py  analyst_score.py  catalyst_score.py  earnings_score.py  fundamental_score.py  ipo_score.py  risk_score.py  technicals.py
opportunity_engine/portfolio/: __init__.py  constructor.py
opportunity_engine/reports/: __init__.py  email.py  writers.py
opportunity_engine/storage/: __init__.py  cache.py
tests/: conftest.py  test_email.py  test_entry_exit.py  test_pipeline.py  test_provenance.py  test_reports.py  test_risk_thesis_portfolio.py  test_scoring.py  test_technicals.py  test_universe.py
