[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opportunity-engine"
version = "0.1.0"
description = "Research-first investment opportunity scanner (research only, no trading)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Opportunity Engine" }]
dependencies = []  # core runs on the standard library alone

[project.optional-dependencies]
providers = ["yfinance>=0.2.40", "alpaca-py>=0.20.0", "requests>=2.31.0", "python-dotenv>=1.0.0"]
dashboard = ["streamlit>=1.30.0"]
dev = ["pytest>=7.4.0"]

[project.scripts]
opportunity-engine = "opportunity_engine.__main__:main"

[tool.setuptools.packages.find]
include = ["opportunity_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
